# type-directed-tdd-rust

./: .travis.yml  Cargo.toml  README.md
presentation/: Defaults1.rs  Defaults1a.rs  Defaults2.rs  FizzBuzz1.rs  FizzBuzz2.rs  FizzBuzz2Bad.rs  FizzBuzz3.rs  FizzBuzz3Compile.rs  FizzBuzz3Seq.rs  FizzBuzz3SeqCompile.rs  FizzBuzz3Validate.rs  FizzBuzz4.rs  FizzBuzz5.rs  FizzBuzz6.rs  FizzBuzz7.rs  FizzBuzz7Rule.rs  FizzBuzz8.rs  FizzBuzz9.rs  FizzBuzzIf.rs  FizzBuzzSpec1.rs  FizzBuzzSpec2.rs  FizzBuzzSpec3.rs  FizzBuzzSpec5.rs  FizzBuzzSpec6.rs  FizzBuzzSpec7.rs  Main1.rs  Main2.rs  Main4.rs  Main5.rs  MainSpec1.rs  Makefile  OptionExample1.rs  slides.tex  testQuick.console  testQuick10.console  testQuick2.console  testQuick3.console  testQuick4.console  testQuick5.console  testQuick6.console  (+2 more)
src/: defaults.rs  divisor.rs  fizzbuzz.rs  main.rs  option_utils.rs  validation.rs
