[package]

name = "type-directed-tdd-rust"
version = "0.1.0"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
description = "Code for FizzBuzz talk"
homepage = "https://github.com/FranklinChen/rust-tau"
repository = "https://github.com/FranklinChen/rust-tau"
readme = "README.md"
keywords = ["fizzbuzz"]
license = "MIT"

[[bin]]

name = "fizzbuzz"

[dependencies.quickcheck]
git = "https://github.com/BurntSushi/quickcheck"

[dependencies.quickcheck_macros]
git = "https://github.com/BurntSushi/quickcheck"
