[package]

name = "type-directed-tdd-rust"
version = "0.1.0"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
description = "Code for FizzBuzz talk"
documentation = "http://rust-ci.org/FranklinChen/type-directed-tdd-rust/doc/fizzbuzz/"
homepage = "https://github.com/FranklinChen/type-directed-tdd-rust"
repository = "https://github.com/FranklinChen/type-directed-tdd-rust"
readme = "README.md"
keywords = ["fizzbuzz"]
license = "MIT"
edition = "2021"

[[bin]]

name = "fizzbuzz"
path = "src/main.rs"

[dependencies]

quickcheck = "*"
rand = "*"
itertools = "*"
